# ivsurf

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  Dockerfile  ENHANCED_PREDICTION_SUMMARY.md  Procfile  README.md  ROADMAP.md  UI_ENHANCEMENT_GUIDE.md  app.py  docker-compose.postgres.yml  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements-dev.txt  requirements-docker.txt  requirements-vercel.txt  requirements.txt  vercel.json
.streamlit/: config.toml
api/: __init__.py  auth.py  index.py  main.py
app/: __init__.py  brand.py  ui.py
core/: __init__.py  advanced_interpolation.py  black_scholes.py  gaussian_process.py  greeks.py  heston.py  interpolation.py  jump_models.py  stochastic_vol.py  surface_model.py  surface_smoothing.py
dashboard/: __init__.py  app.py  app_enhanced.py  components.py  minimal_dashboard.py  retro_terminal.py
docs/: ARCHITECTURE.md
engine/: __init__.py
indicators/: __init__.py  advanced.py
ml/: __init__.py  neural_networks.py  volatility_forecasting.py
models/: __init__.py  garch.py  heston_advanced.py  jump_diffusion.py  regime_pricing.py  regime_switching.py  volatility_clustering.py
portfolio/: regime_backtesting.py
public/: index.html
risk/: __init__.py  stress_testing.py  var_analysis.py
scripts/: compose-up.sh  iv_solver_demo.py  ivsurf_pro.py  ivsurf_retro_terminal.py  ivsurf_terminal.py  ivsurf_ultimate.py  retro_iv_calculator.py  run_premarket_scan.py  simple_iv_calculator.py  simple_iv_demo.py  surface_cli_demo.py  surface_demo.py  test_options_fetcher.py  train_ml_ranker.py
simulation/: __init__.py  correlation_engine.py  exotic_options.py  monte_carlo.py
src/: lib.rs  swing_predictor.rs
tests/: conftest.py  test_animated_surfaces.py  test_api.py  test_api_auth.py  test_backtest_opening.py  test_black_scholes.py  test_brand.py  test_broker_factory.py  test_comprehensive.py  test_guardrails.py  (+28 more)
(+118 files in other folders)
