[project]
name = "ivsurf"
version = "0.2.0"
description = "Quantitative finance research platform — volatility surfaces, swing signals, and risk analytics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dhruv Hegde" }]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "plotly>=5.18.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.13.0",
]
quant = [
    "arch>=6.0.0",
    "statsmodels>=0.14.0",
]
perf = [
    "numba>=0.58.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]
all = [
    "tensorflow>=2.13.0",
    "arch>=6.0.0",
    "statsmodels>=0.14.0",
    "numba>=0.58.0",
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require live market data (deselect with '-m \"not integration\"')",
]
addopts = ["-m", "not integration", "--ignore=tests/test_comprehensive.py"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
